<resources>
    <string name="app_name">MathsQuizv3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="add">Add</string>
    <string name="mult">Multiplication</string>
    <string name="sub">Subtraction</string>
    <string name="divide">Division</string>
    <string name="instruct">Choose a game-mode</string>
    <string name="question">0 x 0</string>
    <string name="submit">Submit!</string>
    <string name="resultDisplay">Your Score: 0</string>
    <string name="goHome">Try again</string>

    <string-array name="gameMode">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>